--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% load static %}
     <div class="container">
-        <h1>Welcome to {{selected_topic.name}} Quiz</h1>
+        <h1>Let's Play {{selected_topic.name}} Quiz</h1>
 
         <div align="right" id="displaytimer"><b>Timer: 0 seconds</b></div>
 
